# yahboom-rdk-x5

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.memory/: MEMORY.md  SKILL.md  feedback-atomic-commits.md  rdk-x5-astra-depth.md  rdk-x5-ci1302-voice.md  rdk-x5-dog-walk.md  rdk-x5-episode-recorder.md  rdk-x5-follow-me.md  rdk-x5-gamepad-teleop.md  rdk-x5-nav2-plan.md  rdk-x5-robot-status.md  rdk-x5-safety-stop.md  rdk-x5-stereo-camera.md  rdk-x5-strafe-weak-rear.md  security-prompt-injection-defense.md
board/etc/systemd/system/: astra-cam.service  camera-preview.service  follow-me.service  mapping.service  mipi-cam.service  ms200-lidar.service  nav-bringup.service  nav2.service  rosbridge.service
board/home/sunrise/.config/autostart/: Start APP Program.desktop
board/home/sunrise/follow/: follow_me.py  follow_start.sh
board/home/sunrise/nav_config/: astra_preview.py  bringup_mux_launch.py  build_stereo_capture.sh  build_stereo_combine.sh  cam_imu_pub.py  camera_autodetect.sh  cmd_vel_mux.py  dog_walk.py  episode_export.py  episode_recorder.py  joy_teleop.py  map_save.sh  nav_start.sh  stereo_cam.py  stereo_capture.c
board/home/sunrise/nav_config/stereo_combine_pkg/: CMakeLists.txt  package.xml
board/home/sunrise/nav_config/stereo_combine_pkg/src/: stereo_combine.cpp
board/home/sunrise/ros2_ws/src/safety_stop/: CMakeLists.txt  package.xml
board/home/sunrise/ros2_ws/src/safety_stop/src/: safety_stop.cpp
board/home/sunrise/scripts/: camera_mode.sh  camera_yahboom.sh
board/home/sunrise/work/scripts/: camera_mode.sh
docs/: gs130wi-stereo-camera-bringup.html  lidar-live-viewer.html  rdk-x5-dataset-recorder-design.html  rdk-x5-dog-walk-design.html  rdk-x5-follow-me-fusion.html  rdk-x5-follow-me-vision.html  rdk-x5-gui-architecture.html  rdk-x5-mapping-workflow.html  rdk-x5-mipi-camera-preview-guide.html  rdk-x5-official-experiments-and-advanced-practice.html  rdk-x5-stereo-depth-design.html  rdk-x5-system-report.html  rdk-x5-wifi-client-guide.html  setup.md  usb-speakerphone-audio-design.html
gui/: run.sh
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/ui/: index.html  style.css  test_imu.html
gui/ui/js/: camera.js  data.js  floatbox.js  health.js  imu.js  logs.js  main.js  ros.js  ros_stub.js  state.js  system.js  teleop.js  viewer.js
notebooks/: episode_lab.ipynb  strafe_test.ipynb
scripts/: camera_preview.sh  deploy_board.sh  replay.sh  robot.rviz  rviz.sh  wifi_ap.sh  wifi_client.sh  wifi_diag.sh  yahboom_control_only.py
