<?xml version="1.0"?>
<package format="3">
  <name>stereo_combine</name>
  <version>1.0.0</version>
  <description>GS130WI hot-path node: shm NV12 pair -> rectified combine + color JPEG</description>
  <maintainer email="vitorcen@gmail.com">vitorcen</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
